projects/compiler/test/parser/enumdecl_error_bad_trait.4.out
Error at %FILE_NAME%:1:21
Unexpected token '?':
  |  enum FooBar123 : Foo? {
                         ^