projects/compiler/test/parser/enumdecl_error_bad_trait.4.abra
enum FooBar123 : Foo? {

}
